--- a/tic-tac-toe/tic tac toe.html
+++ b/tic-tac-toe/tic tac toe.html
@@ -30,6 +30,6 @@
         <div class="text"></div>
 
     </div>
-    <button onclick='startgame()'>replay</button>
+    <button onclick='startgame()'>Replay</button>
     <script src="main.js" type="text/javascript"></script>
 </html>
