--- a/Form Validator/index.html
+++ b/Form Validator/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="container">
-      <form action="" id="form"></form>
+      <form id="form" class="form"></form>
     </div>
     <script src="script.js"></script>
   </body>
