--- a/Form Validator/index.html
+++ b/Form Validator/index.html
@@ -7,7 +7,11 @@
   </head>
   <body>
     <div class="container">
-      <form id="form" class="form"></form>
+      <form id="form" class="form">
+        <h2>Register With Us</h2>
+        <div class="form-control"></div>
+        <label for=""></label>
+      </form>
     </div>
     <script src="script.js"></script>
   </body>
