--- a/Form Validator/index.html
+++ b/Form Validator/index.html
@@ -9,8 +9,26 @@
     <div class="container">
       <form id="form" class="form">
         <h2>Register With Us</h2>
-        <div class="form-control"></div>
-        <label for=""></label>
+        <div class="form-control">
+          <label for="username">username</label>
+          <input type="text" id="" placeholder="Enter Username" />
+          <small>Error Message</small>
+        </div>
+        <div class="form-control">
+          <label for="username">username</label>
+          <input type="text" id="" placeholder="Enter Username" />
+          <small>Error Message</small>
+        </div>
+        <div class="form-control">
+          <label for="username">username</label>
+          <input type="text" id="" placeholder="Enter Username" />
+          <small>Error Message</small>
+        </div>
+        <div class="form-control">
+          <label for="username">username</label>
+          <input type="text" id="" placeholder="Enter Username" />
+          <small>Error Message</small>
+        </div>
       </form>
     </div>
     <script src="script.js"></script>
