--- a/Form Validator/index.html
+++ b/Form Validator/index.html
@@ -15,20 +15,25 @@
           <small>Error Message</small>
         </div>
         <div class="form-control">
-          <label for="username">username</label>
+          <label for="email address">Email</label>
           <input type="text" id="" placeholder="Enter Username" />
           <small>Error Message</small>
         </div>
         <div class="form-control">
-          <label for="username">username</label>
-          <input type="text" id="" placeholder="Enter Username" />
+          <label for="password">password</label>
+          <input type="text" id="password" placeholder="Enter password" />
           <small>Error Message</small>
         </div>
         <div class="form-control">
-          <label for="username">username</label>
-          <input type="text" id="" placeholder="Enter Username" />
+          <label for="password 2">confirm password</label>
+          <input
+            type="text"
+            id="password 2"
+            placeholder="Enter password again"
+          />
           <small>Error Message</small>
         </div>
+        <button type="submit">Submit</button>
       </form>
     </div>
     <script src="script.js"></script>
