--- a/Form Validator/index.html
+++ b/Form Validator/index.html
@@ -10,12 +10,12 @@
     <div class="container">
       <form id="form" class="form">
         <h2>Register With Us</h2>
-        <div class="form-control">
+        <div class="form-control success">
           <label for="username">username</label>
           <input type="text" id="" placeholder="Enter Username" />
           <small>Error Message</small>
         </div>
-        <div class="form-control">
+        <div class="form-control error">
           <label for="email address">Email</label>
           <input type="text" id="" placeholder="Enter Username" />
           <small>Error Message</small>
