--- a/Form Validator/index.html
+++ b/Form Validator/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="form-control error">
           <label for="email address">Email</label>
-          <input type="text" id="" placeholder="Enter Username" />
+          <input type="text" id="" placeholder="Enter email address" />
           <small>Error Message</small>
         </div>
         <div class="form-control">
