--- a/Form Validator/index.html
+++ b/Form Validator/index.html
@@ -22,13 +22,13 @@
         </div>
         <div class="form-control">
           <label for="password">password</label>
-          <input type="text" id="password" placeholder="Enter password" />
+          <input type="password" id="password" placeholder="Enter password" />
           <small>Error Message</small>
         </div>
         <div class="form-control">
           <label for="password 2">confirm password</label>
           <input
-            type="text"
+            type="password"
             id="password 2"
             placeholder="Enter password again"
           />
@@ -37,6 +37,6 @@
         <button type="submit">Submit</button>
       </form>
     </div>
-    <script src="script.js"></script>
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
