--- a/Form Validator/index.html
+++ b/Form Validator/index.html
@@ -3,40 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Form Validator</title>
   </head>
   <body>
-    <script type="text/javascript" src="index.js"></script>
     <div class="container">
       <form id="form" class="form">
         <h2>Register With Us</h2>
         <div class="form-control">
-          <label for="username">username</label>
-          <input type="text" id="" placeholder="Enter Username" />
-          <small>Error Message</small>
+          <label for="username">Username</label>
+          <input type="text" id="username" placeholder="Enter username" />
+          <small>Error message</small>
         </div>
         <div class="form-control">
-          <label for="email address">Email</label>
-          <input type="text" id="" placeholder="Enter email address" />
-          <small>Error Message</small>
+          <label for="email">Email</label>
+          <input type="text" id="email" placeholder="Enter email" />
+          <small>Error message</small>
         </div>
         <div class="form-control">
-          <label for="password">password</label>
+          <label for="password">Password</label>
           <input type="password" id="password" placeholder="Enter password" />
-          <small>Error Message</small>
+          <small>Error message</small>
         </div>
         <div class="form-control">
-          <label for="password 2">confirm password</label>
+          <label for="password2">Confirm Password</label>
           <input
             type="password"
-            id="password 2"
+            id="password2"
             placeholder="Enter password again"
           />
-          <small>Error Message</small>
+          <small>Error message</small>
         </div>
         <button type="submit">Submit</button>
       </form>
     </div>
+
+    <script src="index.js"></script>
   </body>
 </html>
