--- a/Movie Seat Booking/index.html
+++ b/Movie Seat Booking/index.html
@@ -3,7 +3,100 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Movie Seat Booking</title>
   </head>
-  <body></body>
+  <body>
+    <div class="movie-container">
+      <label>Pick a Movie:</label>
+      <select id="movie">
+        <option value="1000">Avengers :End Game (1000 PKR)</option>
+        <option value="1200">Joker (1200 PKR)</option>
+        <option value="800">Toy Story (800 PKR)</option>
+        <option value="900">The Lion King (900 PKR)</option>
+      </select>
+    </div>
+    <ul class="showcase">
+      <li>
+        <div class="seat"></div>
+        <small>N/A</small>
+      </li>
+      <li>
+        <div class="seat Selected"></div>
+        <small>Selected</small>
+      </li>
+      <li>
+        <div class="seat Occupied"></div>
+        <small>Occupied</small>
+      </li>
+    </ul>
+    <div class="container">
+      <div class="screen"></div>
+      <div class="row">
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+      </div>
+      <div class="row">
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat Occupied"></div>
+        <div class="seat Occupied"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+      </div>
+      <div class="row">
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat Occupied"></div>
+        <div class="seat Occupied"></div>
+      </div>
+      <div class="row">
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+      </div>
+      <div class="row">
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat Occupied"></div>
+        <div class="seat Occupied"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+      </div>
+      <div class="row">
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat"></div>
+        <div class="seat Occupied"></div>
+        <div class="seat Occupied"></div>
+        <div class="seat Occupied"></div>
+        <div class="seat"></div>
+      </div>
+    </div>
+    <p class="text">
+      You have Selected <span id="movie">0</span>Seats for a price of PKR
+      <span id="total">0</span>
+    </p>
+    <script src="script.js"></script>
+  </body>
 </html>
