--- a/Tech-Karo Pre -Course 2/Home.html
+++ b/Tech-Karo Pre -Course 2/Home.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
-   <div class="row">
-    <img src="logo.png"  >
-   </div>
+   <div class="row"><img src="logo.png"></div>
     
     <div class="col"><img src="1.PNG"  width="42" height="42"></div>
      <h1>CIRCLE - Tech karo </h1>
