--- a/Tech-Karo Pre -Course 2/Home.html
+++ b/Tech-Karo Pre -Course 2/Home.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
-   <div class="row"><img src="logo.png"></div>
+   <div class="row"><img id="let" src="logo.png"></div>
+   <div class="leap" > <p id="do"> <b id="home">Home</b>   <b id="contact">contact us</b></p></div>
     
-    <div class="col"><img src="1.PNG"  width="42" height="42"></div>
+    <div class="letscode"><img  id='col' src="1.PNG"  width="42" height="42"></div>
      <h1>CIRCLE - Tech karo </h1>
         <p>The <b><em>#TechKaro</em></b> program  is one of <b>circle's</b> key  initiative,run in partnership with <b>EngroVopak & Engro  Foundation</b>.
             The project is currently training nearly 300 young people,primarily women, from undeserved communities in tech based courses such as Front-End Web Development(HTML,CSS,React,JavaScript),Graphics and Digital Marketing. </p>
