--- a/Tech-Karo Pre -Course 2/Contact.html
+++ b/Tech-Karo Pre -Course 2/Contact.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
     <div class="row"><img id="let" src="logo.png"></div>
-   <div class="leap" > <p id="do"> <b id="home">Home   Contact  </b>   </p></div>
+    <ul>
+        <li>Home</li>
+        <li>Contact</li>
+        </ul>
    <div class="code"><img  id='column' src="1.PNG"  width="42" height="42"></div>
    <h1>CIRCLE - Tech karo </h1>
    <p>For queries you can connect us: </p>
