--- a/Tech-Karo Pre -Course 2/Home.html
+++ b/Tech-Karo Pre -Course 2/Home.html
@@ -9,7 +9,10 @@
 </head>
 <body>
    <div class="row"><img id="let" src="logo.png"></div>
-   <div class="leap" > <p id="do"> <b id="home">Home   Contact  </b>   </p></div>
+   <ul>
+    <li>Home</li>
+    <li>Contact</li>
+    </ul>
     
     <div class="letscode"><img  id='col' src="1.PNG"  width="42" height="42"></div>
      <h1>CIRCLE - Tech karo </h1>
