--- a/Tech-Karo Pre -Course 2/Home.html
+++ b/Tech-Karo Pre -Course 2/Home.html
@@ -10,8 +10,8 @@
 <body>
    <div class="row"><img id="let" src="logo.png"></div>
    <ul>
-    <li>Home</li>
-    <li>Contact</li>
+    <li><a href="Home.html">Home</a></li>
+        <li> <a href="Contact.html">Contact</a></li>
     </ul>
     
     <div class="letscode"><img  id='col' src="1.PNG"  width="42" height="42"></div>
